added staff api functions
